--- a/.github/actions/prepare-nix/action.yml
+++ b/.github/actions/prepare-nix/action.yml
@@ -14,8 +14,8 @@ inputs:
     required: true
   CACHE:
     description: cache name
-    default: br4ch1st0chr0n3-nix-managed
-    
+    default: deemp
+
 runs:
   using: composite
   steps:
@@ -24,8 +24,8 @@ runs:
       with:
         extra_nix_config: |
           access-tokens = github.com=${{ inputs.GITHUB_TOKEN }}
-          substituters = https://br4ch1st0chr0n3-nix-managed.cachix.org https://br4ch1st0chr0n3-flakes.cachix.org https://cache.nixos.org/ https://hydra.iohk.io https://nix-community.cachix.org
-          trusted-public-keys = br4ch1st0chr0n3-nix-managed.cachix.org-1:sDKsfgu5fCCxNwVhZg+AWeGvbLlEtZoyzkSNKRM/KAo= br4ch1st0chr0n3-flakes.cachix.org-1:Dyc2yLlRIkdbq8CtfOe24QQhQVduQaezkyV8J9RhuZ8= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
+          substituters = https://deemp.cachix.org https://cache.nixos.org/ https://hydra.iohk.io https://nix-community.cachix.org
+          trusted-public-keys = deemp.cachix.org-1:9shDxyR2ANqEPQEEYDL/xIOnoPwxHot21L5fiZnFL18= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
 
     # - uses: cachix/cachix-action@v10
     #   with:
