--- a/back/language-utils/eo-utils/package.yaml
+++ b/back/language-utils/eo-utils/package.yaml
@@ -1,9 +1,9 @@
 name: eo-utils
 version: 0.1.0.0
-github: "br4ch1st0chr0n3/eo-utils"
+github: "deemp/eo-utils"
 license: BSD3
 author: "Danila Danko"
-maintainer: "br4ch1st0chr0n3@gmail.com"
+maintainer: "deemp@gmail.com"
 copyright: "2022 Danila Danko"
 
 extra-source-files:
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description: Please see the README on GitHub at <https://github.com/br4ch1st0chr0n3/eo-utils#readme>
+description: Please see the README on GitHub at <https://github.com/deemp/eo-utils#readme>
 
 custom-setup:
   dependencies:
