--- a/back/language-utils/language-utils.cabal
+++ b/back/language-utils/language-utils.cabal
@@ -7,10 +7,10 @@ cabal-version: 1.24
 name:           language-utils
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/fizruk/try-phi#readme>
-homepage:       https://github.com/br4ch1st0chr0n3/language-utils#readme
-bug-reports:    https://github.com/br4ch1st0chr0n3/language-utils/issues
+homepage:       https://github.com/deemp/language-utils#readme
+bug-reports:    https://github.com/deemp/language-utils/issues
 author:         Nikolai Kudasov, Danila Danko
-maintainer:     nickolay.kudasov@gmail.com, br4ch1st0chr0n3@gmail.com
+maintainer:     nickolay.kudasov@gmail.com, deemp@gmail.com
 copyright:      2021 Nikolai Kudasov
 license:        BSD3
 build-type:     Custom
@@ -19,7 +19,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/br4ch1st0chr0n3/language-utils
+  location: https://github.com/deemp/language-utils
 
 custom-setup
   setup-depends:
