--- a/back/language-utils/package.yaml
+++ b/back/language-utils/package.yaml
@@ -1,9 +1,9 @@
 name: language-utils
 version: 0.1.0.0
-github: br4ch1st0chr0n3/language-utils
+github: deemp/language-utils
 license: BSD3
 author: Nikolai Kudasov, Danila Danko
-maintainer: nickolay.kudasov@gmail.com, br4ch1st0chr0n3@gmail.com
+maintainer: nickolay.kudasov@gmail.com, deemp@gmail.com
 copyright: 2021 Nikolai Kudasov
 extra-source-files:
   - README.md
