--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,5 +69,5 @@ jobs:
 
   ci:
     name: CI
-    uses: deemp/workflows/.github/workflows/nix-ci.yaml
+    uses: deemp/workflows/.github/workflows/nix-ci.yaml@main
     secrets: inherit
