switch to cabal

--- a/back/package.yaml
+++ b/back/package.yaml
@@ -18,8 +18,8 @@ extra-source-files:
 # common to point users to the README.md file.
 description: Please see the README on GitHub at <https://github.com/githubuser/try-phi-back#readme>
 
-ghc-options:
-  - -Wunused-packages
+# ghc-options:
+  # - -Wunused-packages
 
 dependencies:
   - base >= 4.7 && < 5
@@ -43,7 +43,7 @@ library:
   source-dirs: src
 
 executables:
-  try-phi-back-exe:
+  try-phi-back:
     main: Main.hs
     source-dirs: app
     ghc-options:
