--- a/back/try-phi-back.cabal
+++ b/back/try-phi-back.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.7.
+-- This file has been generated from package.yaml by hpack version 0.35.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -30,7 +30,6 @@ library
       Paths_try_phi_back
   hs-source-dirs:
       src
-  ghc-options: -Wunused-packages
   build-depends:
       aeson
     , base >=4.7 && <5
@@ -50,13 +49,13 @@ library
     , warp
   default-language: Haskell2010
 
-executable try-phi-back-exe
+executable try-phi-back
   main-is: Main.hs
   other-modules:
       Paths_try_phi_back
   hs-source-dirs:
       app
-  ghc-options: -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
     , base >=4.7 && <5
