--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,9 +62,7 @@ jobs:
       - name: Build
         run: |
           cd front
-          nix develop -c bash -c '
-            npm run build:gh-pages
-          '
+          nix run .#buildGHPages
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.9.0
         with:
