--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,8 @@
     "parcel": "2.5.0",
     "process": "^0.11.10",
     "util": "^0.12.4",
-    "spago": "^0.20.9"
+    "spago": "^0.20.9",
+    "purescript": "0.15.7"
   },
   "scripts": {
     "build": "npx spago build",
@@ -21,7 +22,7 @@
     "postquick-start": "npm run dev",
     "prebuild:min": "rm -rf min && mkdir min && cp dev/* min/",
     "build:min": "npx spago bundle-app --to min/index.js --minify && npx parcel build min/index.html",
-    "build:gh-pages": "npm run build:min && cp -TR min docs",
+    "build:gh-pages": "npm i && npm run build:min && cp -TR min docs",
     "build:prod": "npm run build:min && cp -TR min prod",
     "postbuild:prod": "npx http-server prod -o"
   },
