--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,27 +1,6 @@
 jobs:
-  _1_update_flake_locks:
-    name: Update flake locks
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout this repo
-        uses: actions/checkout@v3
-      - name: Install Nix
-        uses: cachix/install-nix-action@v18
-        with:
-          extra_nix_config: "access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}\nsubstituters = https://cache.nixos.org/ https://cache.iog.io https://nix-community.cachix.org https://deemp.cachix.org \ntrusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= haskell-language-server.cachix.org-1:juFfHrwkOxqIOZShtC4YC1uT1bBcq2RSvC7OMKx0Nz8= deemp.cachix.org-1:9shDxyR2ANqEPQEEYDL/xIOnoPwxHot21L5fiZnFL18=\n"
-          install_url: https://releases.nixos.org/nix/nix-2.11.1/install
-      - name: Config git for github-actions
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-      - name: Update flake locks
-        run: |
-          git pull --rebase --autostash
-          nix run .#updateLocks
-          git commit -a -m "action: Update flake locks" && git push || echo ""
   _2_push_to_cachix:
     name: Push to cachix
-    needs: _1_update_flake_locks
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout this repo
@@ -49,7 +28,6 @@ jobs:
           - ubuntu-22.04
   _3_front:
     name: Publish front
-    needs: _1_update_flake_locks
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout this repo
@@ -70,8 +48,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./front/docs
   _4_back:
-    name: Release to Heroku
-    needs: _1_update_flake_locks
+    name: Publish back
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout this repo
@@ -82,7 +59,7 @@ jobs:
           extra_nix_config: "access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}\nsubstituters = https://cache.nixos.org/ https://cache.iog.io https://nix-community.cachix.org https://deemp.cachix.org \ntrusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= haskell-language-server.cachix.org-1:juFfHrwkOxqIOZShtC4YC1uT1bBcq2RSvC7OMKx0Nz8= deemp.cachix.org-1:9shDxyR2ANqEPQEEYDL/xIOnoPwxHot21L5fiZnFL18=\n"
           install_url: https://releases.nixos.org/nix/nix-2.11.1/install
       - name: Log in to Heroku
-        uses: deemp/heroku-deploy@master
+        uses: AkhileshNS/heroku-deploy@master
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: try-phi-back
