--- a/front/package.json
+++ b/front/package.json
@@ -3,15 +3,15 @@
   "private": true,
   "devDependencies": {
     "buffer": "^6.0.3",
-    "esbuild": "^0.14.43",
-    "gh-pages": "3.2.3",
+    "esbuild": "^0.18.14",
+    "gh-pages": "^5.0.0",
     "http-server": "^14.1.1",
     "npx": "^10.2.2",
-    "parcel": "2.5.0",
+    "parcel": "^2.9.3",
     "process": "^0.11.10",
-    "util": "^0.12.4",
-    "spago": "^0.20.9",
-    "purescript": "0.15.7"
+    "util": "^0.12.5",
+    "spago": "^0.21.0",
+    "purescript": "0.15.10"
   },
   "scripts": {
     "build": "npx spago build",
@@ -27,7 +27,7 @@
     "postbuild:prod": "npx http-server prod -o"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.5",
-    "bootstrap": "^5.1.3"
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.0"
   }
 }
